<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SingleMovie">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/pg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tvError"
            android:gravity="center"
            android:text="@string/connection_problems"
            android:visibility="gone"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:id="@+id/ivMoviePoster"
                    android:layout_gravity="center"
                    android:scaleType="matrix"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvMovieTitle"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="2dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvMovieTagLine"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="2dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvMovieInfo"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:layout_marginTop="2dp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/release_date"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:layout_marginTop="1dp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:id="@+id/tvReleaseDate"
                            android:layout_marginTop="1dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:layout_marginTop="1dp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:id="@+id/tvRating"
                            android:layout_marginTop="1dp"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/runtime"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:layout_marginTop="1dp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:id="@+id/tvRuntime"
                            android:layout_marginTop="1dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_marginTop="1dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/budget"
                            android:textStyle="bold"
                            android:textSize="14sp"/>

                        <TextView
                            android:layout_marginTop="1dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:id="@+id/tvBudget"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_marginTop="1dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/revenue"
                            android:textStyle="bold"
                            android:textSize="14sp"/>

                        <TextView
                            android:layout_marginTop="1dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:id="@+id/tvRevenue"/>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"
                        android:layout_marginTop="2dp"
                        android:textStyle="bold"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_marginTop="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:id="@+id/tvOverview"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>